# vericert

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.org  CITATION.cff  ChangeLog.org  LICENSE  Makefile  README.md  README.org  _CoqProject  default.nix  dune  dune-project  flake.nix  shell.nix
CoqUp/: CoqUp.v  Helper.v  Verilog.v
artefact/: Dockerfile  bar-plot.gp  generate_result_csv.py  synthesis-results.tar.xz
artifact/: Dockerfile
benchmarks/: .gitignore  README.md  count-calls  run-vericert.sh
debug/: CoqupTest.ml  dune  vericertExample.ml  vericertTest.ml
doc/: Makefile  Makefile.extr  README.org  common.org  conf.py  documentation.org  index.rst  man.org  vericert.1  vericert.rst
docs/: Makefile  basic-block-generation.org  building.org  common.org  documentation.org  index.md  index.org  man.org  publish.el  publish.setup  scheduler-languages.org  scheduler.org  setup.org
driver/: CoqupDriver.ml  Driver.ml  VericertDriver.ml  dune
example/: explanation.org  interesting.v  main.c  main.sv  main.v  recursive_moore.sv
extraction/: Extraction.v  driver.ml  dune  main.ml
include/: hls.h
ip/: altera.v  div_signed.sv  div_unsigned.v
lit/: basic-block-generation.org  scheduler.org  scheduling.org
scripts/: Makefile  convert.sh  cycle-counts.sh  download_artifact.sh  gather_data.rkt  quartus_synth.tcl  report.sh  run-bambu.sh  run-legup.sh  run-vericert.sh  run-vivado.sh  settings.fish  settings.sh  statistics.py  syn-remote.sh  synth-bambu.sh  synth-bambu.tcl  synth-ssh-bambu.sh  synth-ssh.sh  synth-ssh0.sh  synth.sh  synth.tcl  synthesis-results.org  synthesis-results.scm  synthesise  verilator_main.cpp  xsim-build.sh
src/: Compiler.v  CoqupClflags.ml  HLSOpts.v  dune  (+2 more)
(+379 files in other folders)
