(include_subdirs unqualified)

(library
 (public_name vericert)
 (modules_without_implementation c debugTypes dwarfTypes)
 (modules (:standard \ driver gCC deLexer))
 (libraries menhirLib str unix ocamlgraph coq-smtcoq)
 (flags (:standard -warn-error -A -w -8-9-16-20-26-27-32..36-39-41-44..45-50-60-67)))
